--- a/full.liquid
+++ b/full.liquid
@@ -1,50 +1,16 @@
 <div class="layout layout--row">
   {% assign enabled = data | where: 'enabled', true | sort: 'down_since' %}
-  <div class="column">
-    {% for item in enabled limit: 9 %}
+  <div
+    class="column"
+    data-list-limit="true"
+    data-list-max-height="410"
+    data-list-hidden-count="true"
+    data-list-max-columns="2"
+  >
+    {% for item in enabled %}
       <div class="item">
         <div class="meta">
           <span class="index">{{ forloop.index }}</span>
-        </div>
-        <div class="content">
-          <span class="title title--small">
-            {% if item.alias != '' %}
-              {{ item.alias }} -
-            {% endif %}
-            {{ item.url | remove_first: 'https://' }}
-          </span>
-          <div class="flex">
-            <div class="flex gap--xsmall">
-              {% if item.down == true %}
-                <span class="label label--small label--outline bg--gray-6">Up</span>
-                <span class="label label--small label--inverted">Down</span>
-              {% else %}
-                <span class="label label--small label--inverted">Up</span>
-                <span class="label label--small label--outline bg--gray-6">Down</span>
-              {% endif %}
-            </div>
-            <span class="label label--small">
-              {% if item.down == true %}
-                Since {{ item.down_since | l_date: '%e %b %Y', trmnl.user.locale }}
-                {{ item.down_since | date: '%s' | plus: trmnl.user.utc_offset | date: '%H:%M:%S' }}
-              {% else %}
-                Since {{ item.up_since | l_date: '%e %b %Y', trmnl.user.locale }}
-                {{ item.up_since | date: '%s' | plus: trmnl.user.utc_offset | date: '%H:%M:%S' }}
-              {% endif %}
-            </span>
-            {% if item.ssl.valid != true %}
-              <span class="label label--small label--outline">SSL not valid </span>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-  <div class="column">
-    {% for item in enabled limit: 9 offset: continue %}
-      <div class="item">
-        <div class="meta">
-          <span class="index">{{ forloop.index | plus: 9 }}</span>
         </div>
         <div class="content">
           <span class="title title--small">
